# pz

./: README.md  pyproject.toml
api/: app_hook.py
api/boot/: docker-run.sh
api/controllers/: __init__.py  quota.py  user.py
api/mappers/: user_mapper.py
api/schemes/: user.py
api/service/: user_service.py
ch1/: ch1.py
ch2/: ch2.py
ch3/: ch3.py
config/: __init__.py  config.yaml
ddd-python/: readme.md
ddd-python/api/: user.py
ddd-python/domain/: user.py
ddd-python/repositroy/: user.py
ddd-python/repositroy/cache/: user.py
ddd-python/repositroy/dao/: user.py
ddd-python/service/: user.py
dep-inject/: dep-inject.py
exception/: exception.py
generics/: main.py
module/: module.py  mymodule.py
module/my/: __init__.py  add.py
mq/: mq.py
pydantic/: user.py
sqlorm/: sql.py  sqlv1.py  sqlv2.py
